feat: #637 资产同步工具